--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
     <h1 class="headline">サービス紹介
     </h1>
   </section>
-
-
+  
+  <main>
+    <div class="blog-box">
+      <div class="blog-item">
+        <img class="blog-image"src="img/wc-logo.png"/>
+        <section class="blog-text">
+          <h3>マンツーマンサポートによる学習で、<br/>
+            確実にWebスキルを習得できるプログラミングスクールです。
+          </h3>
+          <a href="">webサイト</a>
+        </section>
+      </div>
+    </div>
+    
+  </main>
 </body>
 </html>
