--- a/index.html
+++ b/index.html
@@ -18,14 +18,42 @@
       <div class="blog-item">
         <img class="blog-image"src="img/wc-logo.png"/>
         <section class="blog-text">
-          <h3>マンツーマンサポートによる学習で、<br/>
+          <p>マンツーマンサポートによる学習で、<br/>
             確実にWebスキルを習得できるプログラミングスクールです。
-          </h3>
+          </p>
           <a href="">webサイト</a>
         </section>
       </div>
+
+      <section class="service1">
+        <h2>
+          <img src="img/wcc-logo.png" alt="ロゴ">
+      　</h2>
+      　<p>未経験から転職を保証する<br/>
+        日本で唯一のプログラミングスクールです。
+        </p>
+        <a href="">webサイト</a>
+        </section>
+
+        <section class="service2">
+          <h2>
+            <img src="img/wcp-logo.png" alt="ロゴ">
+          </h2>
+            <p>家庭も仕事も頑張りたい主婦・ママ向けの<br/>
+              １ヶ月でWebサイトを制作するWebデザインスクールです。
+            </p>
+            <a href="">webサイト</a>
+       　</section>
+
+       <section class="service3">
+         <h2> <img src="img/wcw-logo.png"/>
+        </h2>
+              <p>3000名のエンジニアをサポートしてきたエージェントが<br/>
+                あなたの転職をサポート。
+              </p>
+              <a href="">webサイト</a>
+        　</section>
     </div>
-    
   </main>
 </body>
 </html>
